--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins";
-}
-
-section{
+    font-family: "Poppins", sans-serif;
+  }
+  
+  section {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
-}
-
-section .bg{
+  }
+  
+  section .bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -23,9 +23,9 @@ section .bg{
     height: 100%;
     object-fit: cover;
     pointer-events: none;
-}
-
-section .trees{
+  }
+  
+  section .trees {
     position: absolute;
     top: 0;
     left: 0;
@@ -34,31 +34,31 @@ section .trees{
     object-fit: cover;
     z-index: 100;
     pointer-events: none;
-}
-
-section .girl{
+  }
+  
+  section .girl {
     position: absolute;
     scale: 0.65;
     pointer-events: none;
     animation: animateGirl 10s linear infinite;
-}
-
-@keyframes animateGirl {
+  }
+  
+  @keyframes animateGirl {
     0% {
-        transform: translateX(calc(100% + 100vw));
+      transform: translateX(calc(100% + 100vw));
     }
     50% {
-        transform: translateX(calc(-100% - 100vw));
+      transform: translateX(calc(-100% - 100vw));
     }
     50.01% {
-        transform: translateX(calc(-100% - 100vw))rotateY(180deg);
+      transform: translateX(calc(-100% - 100vw)) rotateY(180deg);
     }
     100% {
-        transform: translateX(calc(100% + 100vw))rotateY(180deg);
+      transform: translateX(calc(100% + 100vw)) rotateY(180deg);
     }
-}
-
-.login {
+  }
+  
+  .login {
     position: relative;
     padding: 60px;
     background: rgba(255, 255, 255, 0.25);
@@ -72,9 +72,9 @@ section .girl{
     flex-direction: column;
     gap: 30px;
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.1);
-}
-
-.login h2 {
+  }
+  
+  .login h2 {
     position: relative;
     width: 100%;
     text-align: center;
@@ -82,13 +82,13 @@ section .girl{
     font-weight: 600;
     color: #8f2c24;
     margin-bottom: 10px;
-}
-
-.login .inputBox {
+  }
+  
+  .login .inputBox {
     position: relative;
-}
-
-.login .inputBox input{
+  }
+  
+  .login .inputBox input {
     position: relative;
     width: 100%;
     padding: 15px 20px;
@@ -99,13 +99,13 @@ section .girl{
     background: #fff;
     border: none;
     margin-bottom: 30px;
-}
-
-.login .inputBox ::placeholder {
+  }
+  
+  .login .inputBox ::placeholder {
     color: #8f2c24;
-}
-
-.login .inputBox #btn {
+  }
+  
+  .login .inputBox #btn {
     position: relative;
     border: none;
     outline: none;
@@ -115,29 +115,29 @@ section .girl{
     font-size: 1.25em;
     font-weight: 500;
     transition: 0.5s;
-}
-
-.login .inputBox #btn:hover{
+  }
+  
+  .login .inputBox #btn:hover {
     background: #d64c42;
-}
-
-.login .group {
+  }
+  
+  .login .group {
     display: flex;
     justify-content: space-between;
-}
-
-.login .group a {
+  }
+  
+  .login .group a {
     font-size: 1.25em;
     color: #8f2c24;
     font-weight: 500;
     text-decoration: none;
-}
-
-.login .group a:nth-child(2){
+  }
+  
+  .login .group a:nth-child(2) {
     text-decoration: underline;
-}
-
-.leaves {
+  }
+  
+  .leaves {
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -147,85 +147,86 @@ section .girl{
     align-items: center;
     z-index: 1;
     pointer-events: none;
-}
-
-.leaves .set {
+  }
+  
+  .leaves .set {
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     pointer-events: none;
-}
-
-.leaves .set div {
+  }
+  
+  .leaves .set div {
     position: absolute;
     display: block;
-}
-
-.leaves .set div:nth-child(1) {
+  }
+  
+  .leaves .set div:nth-child(1) {
     left: 20%;
     animation: animate 20s linear infinite;
-}
-
-.leaves .set div:nth-child(2) {
+  }
+  
+  .leaves .set div:nth-child(2) {
     left: 50%;
     animation: animate 14s linear infinite;
-}
-
-.leaves .set div:nth-child(3) {
+  }
+  
+  .leaves .set div:nth-child(3) {
     left: 70%;
     animation: animate 12s linear infinite;
-}
-
-.leaves .set div:nth-child(4) {
+  }
+  
+  .leaves .set div:nth-child(4) {
     left: 5%;
     animation: animate 15s linear infinite;
-}
-
-.leaves .set div:nth-child(5) {
+  }
+  
+  .leaves .set div:nth-child(5) {
     left: 85%;
     animation: animate 18s linear infinite;
-}
-
-.leaves .set div:nth-child(6) {
+  }
+  
+  .leaves .set div:nth-child(6) {
     left: 90%;
     animation: animate 12s linear infinite;
-}
-
-.leaves .set div:nth-child(7) {
+  }
+  
+  .leaves .set div:nth-child(7) {
     left: 15%;
     animation: animate 14s linear infinite;
-}
-
-.leaves .set div:nth-child(8) {
+  }
+  
+  .leaves .set div:nth-child(8) {
     left: 60%;
     animation: animate 15s linear infinite;
-}
-
-@keyframes animate {
+  }
+  
+  @keyframes animate {
     0% {
-        opacity: 0;
-        top: -10%;
-        transform: translateX(20px) rotate(0deg);
+      opacity: 0;
+      top: -10%;
+      transform: translateX(20px) rotate(0deg);
     }
     10% {
-        opacity: 1;
+      opacity: 1;
     }
     20% {
-        transform: translateX(-20px) rotate(45deg);
+      transform: translateX(-20px) rotate(45deg);
     }
     40% {
-        transform: translateX(-20px) rotate(90deg);
+      transform: translateX(-20px) rotate(90deg);
     }
     60% {
-        transform: translateX(20px) rotate(180deg);
+      transform: translateX(20px) rotate(180deg);
     }
     80% {
-        transform: translateX(-20px) rotate(45deg);
+      transform: translateX(-20px) rotate(45deg);
     }
     100% {
-        top: 110%;
-        transform: translateX(20px) rotate(225deg);
+      top: 110%;
+      transform: translateX(20px) rotate(225deg);
     }
-}
+  }
+  
